修改顶部返回按钮的图片和功能

--- a/Classes/ios/VKVideoPlayerView.xib
+++ b/Classes/ios/VKVideoPlayerView.xib
@@ -118,9 +118,9 @@ Your video will resume shortly.</string>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lRL-G6-RP6">
-                                    <rect key="frame" x="6" y="6" width="40" height="40"/>
+                                    <rect key="frame" x="6" y="6" width="30" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" image="VKVideoPlayer_cross.png">
+                                    <state key="normal">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                 </button>
