--- a/Classes/ios/VKVideoPlayerView.xib
+++ b/Classes/ios/VKVideoPlayerView.xib
@@ -15,6 +15,7 @@
                 <outlet property="captionTopContainerView" destination="62" id="65"/>
                 <outlet property="captionTopView" destination="63" id="67"/>
                 <outlet property="controls" destination="31" id="34"/>
+                <outlet property="courseTitleLabel" destination="yam-u1-q4f" id="CC2-hG-K6u"/>
                 <outlet property="currentTimeLabel" destination="83" id="85"/>
                 <outlet property="doneButton" destination="LWl-fl-KpR" id="gkB-cY-P4X"/>
                 <outlet property="externalDeviceImageView" destination="103" id="106"/>
@@ -118,12 +119,19 @@ Your video will resume shortly.</string>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lRL-G6-RP6">
-                                    <rect key="frame" x="6" y="6" width="30" height="30"/>
+                                    <rect key="frame" x="6" y="1" width="44" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                 </button>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yam-u1-q4f">
+                                    <rect key="frame" x="50" y="1" width="220" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
@@ -132,7 +140,7 @@ Your video will resume shortly.</string>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="89">
-                                    <rect key="frame" x="76" y="0.0" width="95" height="44"/>
+                                    <rect key="frame" x="114" y="0.0" width="95" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
